--- a/.gitignore
+++ b/.gitignore
@@ -71,9 +71,7 @@ venv/
 
 # Build
 dist/
-build/
 .next/
-out/
 
 # Logs
 *.log
@@ -89,3 +87,9 @@ checkpoints/
 # Misc
 .cache/
 coverage/
+
+# DB 데이터 무시
+db_data/
+db.data/
+mysql-data/
+*.ibd
