S14P11B104-171 RabbitMQ 테스트 환경 구성 (#5)

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     // 7. RabbitMQ와 통신하기 위한 필수 라이브러리
     // ==========================================
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testRuntimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
